# OkComputer

./: .gitignore  .gitmodules  CONTRACTS.md  DECISIONS.md  Prompt.md  okcomputer.config.json  okcomputer.config.schema.json  pyproject.toml  r.py  s.ps1
bridge/: __init__.py  audio_monitor.py  config.py  controller.py  errors.py  main.py  models.py  requirements.txt  runtime.py  text.py  ws_relay.py
bridge/ipc/: __init__.py  client.py
bridge/llm/: __init__.py  router.py
bridge/stt/: vosk_backend.py  whisper_backend.py
bridge/system/: __init__.py  handler.py
bridge/tts/: espeak_backend.py  kokoro_backend.py
core/: CMakeLists.txt
core/include/OkComputer/: Interfaces.hpp
core/src/: AudioCapture.cpp  AudioCapture.hpp  CommandRouter.cpp  CommandRouter.hpp  Config.cpp  Config.hpp  IPCServer.cpp  IPCServer.hpp  KeywordDetector.cpp  KeywordDetector.hpp  StateMachine.cpp  StateMachine.hpp  TTSEngine.cpp  TTSEngine.hpp  main.cpp
scripts/: build.ps1  build.sh  run.ps1  run.sh  setup.ps1  setup.sh
service/: OkComputerService.ps1
service/linux/: okcomputer.service
service/macos/: com.okcomputer.plist
service/win/: OkComputerService.cpp
tests/functional/: test_contract_flows.py
tests/integration/: test_integration_contracts.py
tests/unit/bridge/: test_bridge.py
tests/unit/core/: test_core.cpp
webapp/: eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
webapp/src/: main.tsx  style.css  types.ts
webapp/src/components/: CommandPalette.tsx  LLMStatus.tsx  StopButton.tsx  (+4 more)
webapp/tests/: components.test.tsx
(+3 files in other folders)
